user/.k8s/devel/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "240"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "240"
spec:
  tls:
    - hosts:
        - user.vexl.devel.cleevio.io
      secretName: vexl-user-ms-api-tls
  rules:
    - host: user.vexl.devel.cleevio.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: application-cluster-ip-service
                port:
                  number: 8080
